added filtering and fixed ordering

--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
 <body>
 	<!-- Our graph will be added inside this divider element -->
 	<div id="graph"></div>
+	<input type="checkbox" id="male" checked> Male
+	<input type="checkbox" id="female" checked> Female
+	<input type="checkbox" id="othergender" checked> Other
+	<br>Minimum age: <input type="number" id="minage" min="0" max="80" step="1" value="0" required>
+	<br>Maximum age: <input type="number" id="maxage" min="0" max="80" step="1" value="80" required>
 </body>
 </html>
