--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<!-- Always include D3 first. -->
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+	<script src="multiple-select.js"></script>
 	<script src="http://d3js.org/d3.v3.min.js"></script>
 	<script src="d3-legend.js"></script>
 	<!-- Include script.js, which is where all our code lives -->
 	<script src="script.js"></script>
 	<!-- Include any styles we want to add to our page -->
 	<!-- <link rel="stylesheet" href="styles.css"> -->
+	<link rel="stylesheet" href="multiple-select.css">
 	<style>
 	#graph {
-		padding-left: 50px;
+		display: inline-block;
 	}
 
 	.xaxis path {
@@ -28,19 +31,38 @@
 		stroke:black;
 		opacity:0.8;
 	}
+
+	.rightpane {
+		display: inline-block;
+		position: absolute;
+		top: 5vh;
+	}
+
+	.ms-drop, .ms-choice {
+		 font-size: 26px;
+	}
+
+	input[type=checkbox] {
+  		transform: scale(1.5);
+	}
 	
 	</style>
 </head>
 <body>
 	<!-- Our graph will be added inside this divider element -->
-	<div id="graph"></div>
+	<div style="width:100%">
+		<div id="graph"></div>
+		<div class="rightpane">
+			<h1>Candy Selection</h1>
+			<select multiple="multiple" id="candySelect"></select>
+		</div>
+	</div>
 	<div id="inputs">
 		<input type="checkbox" id="male" checked> Male
 		<input type="checkbox" id="female" checked> Female
 		<input type="checkbox" id="othergender" checked> Other
 		<br>Minimum age: <input type="number" id="minage" min="0" max="80" step="1" value="0" required>
 		<br>Maximum age: <input type="number" id="maxage" min="0" max="80" step="1" value="80" required>
-		<br>Number of Candies: <input type="number" id="numcandies" min="1" max="48" step="1" value="48" required>
 	</div>
 </body>
 </html>
