--- a/index.html
+++ b/index.html
@@ -45,6 +45,24 @@
 	input[type=checkbox] {
   		transform: scale(1.5);
 	}
+
+	div.tooltip {	
+		position: absolute;			
+		text-align: justify;			
+		width: 70px;					
+		height: 50px;					
+		padding: 2px;				
+		font: 12px sans-serif;		
+		background: black;
+		color: aliceblue;	
+		border: 0px;		
+		border-radius: 8px;			
+		pointer-events: none;			
+	}
+
+	.highlighted {
+		color: yellow;
+	}
 	
 	</style>
 </head>
@@ -64,5 +82,6 @@
 		<br>Minimum age: <input type="number" id="minage" min="0" max="80" step="1" value="0" required>
 		<br>Maximum age: <input type="number" id="maxage" min="0" max="80" step="1" value="80" required>
 	</div>
+	<div id="tooltip" display="none" style="position: absolute; display: none;"></div>
 </body>
 </html>
