--- a/index.html
+++ b/index.html
@@ -49,8 +49,6 @@
 	div.tooltip {	
 		position: absolute;			
 		text-align: justify;			
-		width: 70px;					
-		height: 50px;					
 		padding: 2px;				
 		font: 12px sans-serif;		
 		background: black;
@@ -61,7 +59,7 @@
 	}
 
 	.highlighted {
-		color: yellow;
+		color: cyan;
 	}
 	
 	</style>
